// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Tooltip should render the default markup 1`] = `
<div>
  <div class="ddm-tooltip">
    <div ref="tooltipTarget"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-question-circle-full">
        <use xlink:href="icons.svg#question-circle-full"></use>
      </svg></div>
  </div>
</div>
`;

exports[`Field Tooltip should update the tooltip visible state when the mouse is over the tooltip target 1`] = `
<div>
  <div class="ddm-tooltip">
    <div ref="tooltipTarget"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-question-circle-full">
        <use xlink:href="icons.svg#question-circle-full"></use>
      </svg></div>
  </div>
</div>
`;

exports[`Field Tooltip should update the tooltip visible state when the mouse is over the tooltip target 2`] = `
<div class="ddm-tooltip">
  <div ref="tooltipTarget"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-question-circle-full">
      <use xlink:href="icons.svg#question-circle-full"></use>
    </svg></div>
</div>
`;

exports[`Field Tooltip should update the tooltip visible state when the mouse leaved the tooltip target 1`] = `
<div>
  <div class="ddm-tooltip">
    <div ref="tooltipTarget"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-question-circle-full">
        <use xlink:href="icons.svg#question-circle-full"></use>
      </svg></div>
  </div>
</div>
`;
